# pi-edge-mcp

./: README.md  pyproject.toml
deploy/: pi-edge-mcp.service
src/pi_edge_mcp/: __init__.py  __main__.py  gpio.py  metrics.py  server.py
tests/: test_server.py
