[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-edge-mcp"
version = "0.1.0"
description = "A pure-Python MCP server exposing Raspberry Pi system telemetry. No Rust, no compiled extensions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Adam Munawar Rahman" }]
keywords = ["mcp", "model-context-protocol", "raspberry-pi", "telemetry", "pure-python", "no-rust"]
dependencies = ["anodize-mcp>=0.7"]

[project.scripts]
pi-edge-mcp = "pi_edge_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
